# rental-market-dynamics-dubai

./: Makefile  README.md  RELEASE_NOTES.md  dubai_land_department.py  pyproject.toml  requirements.txt  run_etl_pipeline.py
.github/workflows/: build_and_deploy.yml  cron.yml
lib/analysis/: ddl.sql  dim_contract_type.sql  dim_date.sql  dim_location.sql  dim_project.sql  dim_property.sql  dim_tenant.sql  fact_rental_contract.sql
lib/workspace/: __init__.py  duckdb_store.py
tests/: test_etl_pipeline.py
